package notification;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service Notification {
  rpc Schedule(ScheduleRequest) returns (google.protobuf.Empty);
}

message ScheduleRequest {
  required string id = 1;
  required string reservation_id = 2;
  required google.protobuf.Timestamp send_at = 3;
}
